--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://arkalim.org"
+baseURL: "https://vivo1310.netlify.app"
 languageCode: en-us
 title: Vi Vo
 theme: PaperMod
@@ -52,7 +52,7 @@ params:
     imageHeight: 400
     # buttons:
     #   - name: Resume
-    #     url: "https://drive.google.com/file/d/15bupi_Ez5GhhNa2LIT7an1Qxg-0XKYH2/view"
+    #     url: ""
 
   # List View
   hideDescriptionInList: false
